--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "firebase": "^10.13.2",
     "lucide-react": "^0.441.0",
+    "mlp-score-live": ".",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
