--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_FB_API="AIzaSyBVeBBew_8YJ97eNo1FTOy9GsH0jtLowec",
-NEXT_PUBLIC_FB_AUTH_DOMAIN="mlpscores-a6d96.firebaseapp.com",
-NEXT_PUBLIC_FB_PROJECT_ID="mlpscores-a6d96",
-NEXT_PUBLIC_FB_STORAGE_BUCKET="mlpscores-a6d96.appspot.com",
-NEXT_PUBLIC_FB_MESSAGING_SENDER_ID="400774774469",
-NEXT_PUBLIC_FB_APP_IP="1:400774774469:web:f1cc3fd5e0e72c48e8faac",
+NEXT_PUBLIC_FB_API="AIzaSyBVeBBew_8YJ97eNo1FTOy9GsH0jtLowec"
+NEXT_PUBLIC_FB_AUTH_DOMAIN="mlpscores-a6d96.firebaseapp.com"
+NEXT_PUBLIC_FB_PROJECT_ID="mlpscores-a6d96"
+NEXT_PUBLIC_FB_STORAGE_BUCKET="mlpscores-a6d96.appspot.com"
+NEXT_PUBLIC_FB_MESSAGING_SENDER_ID="400774774469"
+NEXT_PUBLIC_FB_APP_IP="1:400774774469:web:f1cc3fd5e0e72c48e8faac"
 NEXT_PUBLIC_FB_MEASUREMENT_ID="G-WYLJ1HSQ9F"
